# infbench

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  YAML_VALIDATION.md  app.py  launch_pd.sh  push_after_benchmark.sh  pyproject.toml  run_dashboard.sh  srtslurm.yaml.example  test_acc.sh
analysis/dashboard/: app.py  node_metrics_tab.py  rate_match_tab.py
configs/: deepseek-r1-fp4-disagg.yaml  example-sweep.yaml  example.yaml  example_with_aliases.yaml  gb200_fp4_max_tpt.yaml  gb200_fp8_1p_4d.yaml  gb200_fp8_1p_4d_sweep.yaml  gb200_fp8_profiling.yaml
configs/gb200-fp4/: 1p1d.yaml  agg.yaml  max-tpt.yaml
configs/gb200-fp8/: max-tpt-2p1d.yaml
dashboard/: app.py  components.py  config_tab.py  latency_tab.py  node_metrics_tab.py  pareto_tab.py
docs/: README.md  SUMMARY.md  analysis.md  configuration.md  installation.md  monitoring.md  sweeps.md
recipies/gb200-fp4/: 1p2d.yaml  agg.yaml  max-tpt-2.yaml  max-tpt.yaml
recipies/gb200-fp8/: low-latency.yaml  max-tpt-2p1d.yaml
scripts/: submit_yaml.py  worker_setup.py
scripts/benchmarks/sa-bench/: bench.sh
scripts/templates/: job_script_template_agg.j2  job_script_template_disagg.j2
scripts/worker_setup/: command.py  utils.py  worker.py
slurm_jobs/: SWEEP_README.md  example_manual_disagg_config.yaml  example_sweep_config.yaml  job_script_template_agg.j2  job_script_template_disagg.j2  submit_job_script.py  sweep_jobs.py
slurm_jobs/scripts/: worker_setup.py
slurm_jobs/scripts/gpqa/: bench.sh
slurm_jobs/scripts/sa-bench/: bench.sh
slurm_runner/: README.md  job_script_template_agg.j2  job_script_template_disagg.j2  log.txt  profile.sh  submit.py  submit_job_script.py
slurm_runner/scripts/: profile.sh  sync_results.py  worker_setup.py
slurm_runner/scripts/sa-bench/: bench.sh
src/infbench/: __init__.py
src/infbench/backends/: base.py  legacy.py  sglang.py
src/infbench/cli/: submit.py
src/infbench/core/: config.py
src/srtctl/: __init__.py
src/srtctl/backends/: base.py  sglang.py
src/srtctl/cli/: submit.py
src/srtctl/core/: config.py  schema.py  sweep.py  (+1 more)
srtlog/: sync_results.py  visualizations.py
srtslurm/: cloud_sync.py  run_loader.py  visualizations.py
tests/: README.md  test_aggregations.py  test_basic.py  test_command_generation.py  test_validation.py
(+11 files in other folders)
