[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srtctl"
version = "0.1.0"
description = "Benchmark submission framework for distributed serving workloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
srtctl = "srtctl.cli.submit:main"

[tool.hatch.build.targets.wheel]
packages = ["src/srtctl"]

[tool.ruff]
line-length = 120
target-version = "py310"
