[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srtctl"
version = "0.1.0"
description = "Benchmark submission framework for distributed serving workloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML",
]

[project.scripts]
srtctl = "srtctl.cli.submit:main"

[tool.hatch.build.targets.wheel]
packages = ["src/srtctl"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = false
